Добавлены стили для таблицы

--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html>
 <head>
     <title>amoCRM Deals</title>
-    <style></style>
+    <style>
+        #deals-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+    
+        #deals-table th, #deals-table td {
+            border: 2px solid lightgray;
+            padding: 8px;
+            text-align: left;
+        }
+
+    </style>
 </head>
 <body>
     <h1>Сделки amoCRM</h1>
