Добавлен выбор отображения количества сделок на одной странице

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 </head>
 <body>
     <h1>Сделки amoCRM</h1>
+    <div id="deals-per-page">
+        <button value="2">2</button>
+        <button value="5">5</button>
+        <button value="10">10</button>
+    </div>
     <table id="deals-table">
         <thead>
             <tr>
