Добавлено отображение всех сделок на странице

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button value="2">2</button>
         <button value="5">5</button>
         <button value="10">10</button>
+        <button value="all">Все</button>
     </div>
     <table id="deals-table">
         <thead>
