Добавлен выпадающий список для выбора количества сделок на странице

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         </table>
         <div class="buttons-container">
             <div id="deals-per-page">
-                <button value="2">2</button>
-                <button value="5">5</button>
-                <button value="10">10</button>
-                <button value="all">Все</button>
-            </div>
+                <select id="deals-select">
+                    <option value="2">2</option>
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="all">Все</option>
+                </select>
+            </div>            
             <div id="pagination"></div>
         </div>
     </div>
