--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                         <option class="select-items" value="all">Все</option>
                     </select>
                 </div>
-            </div>                       
+            </div>
+            <div id="loading-wheel"></div>                     
             <div id="pagination"></div>
         </div>
     </div>
